fix upload file name too long display

--- a/public/stylesheets/main.styl
+++ b/public/stylesheets/main.styl
@@ -502,6 +502,8 @@ input[name='task_users']
                         overflow hidden
                         text-overflow ellipsis
                         white-space nowrap
+                        max-width 250px
+                        display block
                     .log
                         font-size 12px
 #edit_task_info_form_wrapper,#edit_task_users_form_wrapper,#add_task_milestone_form_wrapper,#task_branch_form_wrapper
